# slint_learn

./: .gitignore  Cargo.toml  README.md  Slint_Rust.md  系统自定义组件.md
base/: 10_for.slint  11_animation.slint  12_state.slint  13_slot.slint  14_global.slint  15_export_import.slint  1_slint_order.slint  2_define_prop.slint  3_private_change.slint  4_struct.slint  5_anonymous_struct.slint  6_enum.slint  7_array.slint  8_function.slint  9_callback.slint
define/define_component/: index.slint
define/define_component/src/button/: button.slint  index.slint
define/define_component/themes/: index.slint
define/tests/src/: button.slint  keyboard.slint
hello/: Cargo.toml  build.rs
hello/components/: hello.slint
hello/src/: main.rs
hello/ui/: hello.slint
inner_components/: Cargo.toml
inner_components/components/: Button.slint  Dialog.slint  Flickable.slint  FoucsScope.slint  GridLayout.slint  HorizontalLayout.slint  Image.slint  Path.slint  PopupWindow.slint  Rectangle.slint  Text.slint  TextInput.slint  TouchArea.slint  VerticalLayout.slint  window.slint
inner_defines/: AboutSlint.slint  Button.slint  CheckBox.slint  ComboBox.slint  GridBox.slint  GroupBox.slint  HorizontalBox.slint  LineEdit.slint  ListView.slint  ProgressIndicator.slint  ScrollView.slint  Slider.slint  SpinBox.slint  StandardButton.slint  StandardListView.slint  StandardTableView.slint  Switch.slint  TabWidget.slint
quickstart/: Cargo.toml
quickstart/src/: main.rs
quickstart/ui/: app.slint
todo/: Cargo.toml  README.md
todo/src/: main.rs
todo/ui/: app.slint
(+5 files in other folders)
