# [package]
# name = "slint_learn"
# version = "0.1.0"
# edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# slint = "1.1.1"

# [build-dependencies]
# slint-build = "1.1.1"

[workspace]
members = ["hello","inner_components"]

# [workspace.dependencies]
# slint = "1.1.1"
# slint-build = "1.1.1"